--- a/tcc/diversos/resumos.tex
+++ b/tcc/diversos/resumos.tex
@@ -2,8 +2,8 @@
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
 A sociedade tem cada vez mais expressado a sua opinião através de Redes
-Sociais, sendo que entre essas se destaca o
-Reddit. De fato, essa é uma das maiores redes sociais no mundo, com mais de 17
+Sociais, sendo que entre essas redes se destaca o
+Reddit. De fato, essa é uma das maiores redes sociais, com mais de 17
 milhões de usuários. Nesta, os usuários podem postar \textit{links}, bem como
 comentários sobre estes, gerando um grande volume de dados que muitas vezes são
 ignorados.
@@ -17,12 +17,10 @@ consumidores em relação a um novo produto.
 Assim, neste trabalho foi desenvolvido um \textit{software} que permite efetuar
 a análise de sentimentos na rede social Reddit. Esse foi desenvolvido
 utilizando o método de \ac{VADER}, que se encontra implementado no
-\textit{framework} \ac{NLTK}.
-
-Além disso, utilizou-se o Método de Propagação Dupla, com a escolha de palavras
-alvos. A partir dessa implementação obteve-se uma assertividade de 59,17\% na
-avaliação de comentários de política e 72,54\% na avaliação de comentários sobre
-filmes.
+\textit{framework} \ac{NLTK}. Além disso, utilizou-se o Método de Propagação
+Dupla, com a escolha de palavras alvos. A partir da implementação desenvolvida
+obteve-se uma assertividade de 59,17\% na avaliação de sentimentos em comentários de política
+e 72,54\% na avaliação de sentimentos em comentários sobre filmes.
 
 
  \textbf{Palavras-chaves}: Reddit. Processamento de Linguagem Natural. Análise de Sentimentos.
